workin on the quiz

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </div>
       <div class="modal-footer">
         <a href="tictactoe.html" class="btn btn-info" role="button">Tic Tac Toe</a>
-        <a href="#link" class="btn btn-info" role="button">Memory Game</a>
-        <a href="#link" class="btn btn-info" role="button">Chase Batman</a>
+        <a href="" class="btn btn-info" role="button">Memory Game</a>
+        <a href="quiz.html" class="btn btn-info" role="button">SuperHero Quiz</a>
       </div>
     </div>
   </div>
